--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,27 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch questao",
+            "request": "launch",
+            "mainClass": "questao",
+            "projectName": "questao7"
+        },
+        {
+            "type": "java",
+            "name": "Launch questao3",
+            "request": "launch",
+            "mainClass": "questao3",
+            "projectName": "questao7"
+        },
+        {
+            "type": "java",
+            "name": "Launch questao3",
+            "request": "launch",
+            "mainClass": "testeDeFor.questao3",
+            "projectName": "questao7"
+        },
+        {
+            "type": "java",
             "name": "Launch Current File",
             "request": "launch",
             "mainClass": "${file}"
