--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "java.project.sourcePaths": [
         "atividade6/src",
         "atividade4/teste/src",
-        "atividade8/src"
+        "atividade8/src",
+        "atividade8"
     ]
 }
