--- a/trabalhandocombancodedados/app/src/main/AndroidManifest.xml
+++ b/trabalhandocombancodedados/app/src/main/AndroidManifest.xml
@@ -13,6 +13,20 @@
         android:theme="@style/Theme.TrabalhandoComBancoDeDados"
         tools:targetApi="31">
         <activity
+            android:name=".EditarActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DeletarActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CadastroActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false"
+            android:label="@string/title_activity_login"
+            android:theme="@style/Theme.TrabalhandoComBancoDeDados.NoActionBar" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
